# bintang-buddy

./: .flake8  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yaml
bintangbuddy/: config.py  schedules.py
python/: bintang_schedules.py  config.py  requirements.txt
